--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
 	      <!-- Collect the nav links, forms, and other content for toggling -->
 	      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	        <ul class="nav navbar-nav">
-	          <li><a href="/pages/about">About <span class="sr-only">(current)</span></a></li>
-	          <li><a href="/pages/contact">Contact</a></li>
+	          <li><%= link_to 'About', pages_about_path %> <span class="sr-only">(current)</span></a></li>
+	          <li><%= link_to 'Contact', pages_contact_path %></li>
 	       <!-- <li class="dropdown">
 	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 	            <ul class="dropdown-menu">
@@ -29,26 +29,22 @@
 	            </ul>
 	          </li> -->
 	        </ul>
-	      <!--  <form class="navbar-form navbar-left">
+	        <form class="navbar-form navbar-left">
 	          <div class="form-group">
 	            <input type="text" class="form-control" placeholder="Search">
 	          </div>
 	          <button type="submit" class="btn btn-default">Submit</button>
-	        </form> -->
+	        </form> 
 	      
-		  <!--  <ul class="nav navbar-nav navbar-right">
-	          <li><a href="#">Link</a></li>-->
-	      
-		    <!--  <li class="dropdown">
-	            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-	            <ul class="dropdown-menu">
-	              <li><a href="#">Action</a></li>
-	              <li><a href="#">Another action</a></li>
-	              <li><a href="#">Something else here</a></li>
-	              <li role="separator" class="divider"></li>
-	              <li><a href="#">Separated link</a></li>
-	            </ul>
-	          </li> -->
+		    <ul class="nav navbar-nav navbar-right">
+	   		<% if user_signed_in? %>
+				<li><%= link_to 'Edit Profile', edit_user_registration_path %></li>
+				<li><%= link_to 'Sign out', destroy_user_session_path, method: :delete %></li>
+			<% else %>
+					<li><%= link_to 'Sign up', new_user_registration_path %></li>
+					<li><%= link_to 'Sign in', new_user_session_path %></li>
+			<% end %>
+				    
 	        </ul>
 	      </div><!-- /.navbar-collapse -->
 	    </div><!-- /.container-fluid -->
